Bug 25308 - libc/locale/lmessages.c declares a global variable 'empty'
Summary: libc/locale/lmessages.c declares a global variable 'empty'
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: bin (show other bugs)
Version: 5.0-CURRENT
Hardware: Any Any
: Normal Affects Only Me
Assignee: Alexey Zelkin
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2001-02-23 14:30 UTC by brandt
Modified: 2001-02-24 13:15 UTC (History)
0 users

See Also:


Attachments
file.diff (331 bytes, patch)
2001-02-23 14:30 UTC, brandt
no flags Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description brandt 2001-02-23 14:30:01 UTC
libc/locale/lmessages.c contains the following definition:

char empty[] = "";

This is a serious namespace pollution. Probably a 'static' is missing.

How-To-Repeat: 	
Link a program which contains a symbol 'empty' and watch the linker to complain.
Comment 1 Kris Kennaway freebsd_committer freebsd_triage 2001-02-24 07:53:42 UTC
Responsible Changed
From-To: freebsd-bugs->phantom

phantom is responsible for this code
Comment 2 Alexey Zelkin freebsd_committer freebsd_triage 2001-02-24 13:14:25 UTC
State Changed
From-To: open->closed

Fixed in rev 1.6 of lmessages.c